...

            <!-- Title -->
            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Incidències per validar"
                android:textSize="20sp"
                android:gravity="center"
                android:padding="8dp"
                android:background="@color/blau_clar"
                android:textColor="@color/blau_marino" />

...
